macOS/DSManagers/ExpressionManager/inferencerule_parser.output
Terminals which are not used

   t_Eq
   t_ArgumentNumber


State 0 conflicts: 2 shift/reduce
State 4 conflicts: 2 shift/reduce, 1 reduce/reduce


Grammar

    0 $accept: ListOfInferenceRules $end

    1 ListOfInferenceRules: InferenceRule
    2                     | InferenceRule ListOfInferenceRules

    3 InferenceRule: t_OperatorString Operator t_MinArgs Integer t_MaxArgs Integer t_Operand1 TypeTuple t_Operand2 TypeTuple t_Operand3 TypeTuple t_OtherOperandsString TypeTuple t_InferString InferredTypeTuple PrintString TypeCastOperands
    4              | t_OperatorString Operator t_MinArgs Integer t_MaxArgs Integer t_Operand1 TypeTuple t_Operand2 TypeTuple t_OtherOperandsString TypeTuple t_InferString InferredTypeTuple PrintString TypeCastOperands
    5              | t_OperatorString Operator t_MinArgs Integer t_MaxArgs Integer t_Operand1 TypeTuple t_Operand2 TypeTuple t_Operand3 TypeTuple t_InferString InferredTypeTuple PrintString TypeCastOperands
    6              | t_OperatorString Operator t_MinArgs Integer t_MaxArgs Integer t_Operand1 TypeTuple t_Operand2 TypeTuple t_InferString InferredTypeTuple PrintString TypeCastOperands
    7              | t_OperatorString Operator t_MinArgs Integer t_MaxArgs Integer t_Operand1 TypeTuple t_InferString InferredTypeTuple PrintString TypeCastOperands
    8              | Comments

    9 TypeTuple: t_TypeValue t_OSquareBrack Integer t_CSquareBrack
   10          | t_TypeValue t_OSquareBrack t_Hash Integer t_CSquareBrack

   11 InferredTypeTuple: TypeTuple
   12                  | t_TypeValue t_OSquareBrack Computation t_CSquareBrack

   13 Computation: t_Max t_OBrack ArgumentForComputation t_Comma ArgumentForComputation t_CBrack
   14            | t_Min t_OBrack ArgumentForComputation t_Comma ArgumentForComputation t_CBrack
   15            | t_Add t_OBrack ArgumentForComputation t_Comma ArgumentForComputation t_CBrack
   16            | t_Addall t_OBrack ArgumentForComputation t_CBrack

   17 ArgumentForComputation: t_Hash Integer
   18                       | Integer
   19                       | Computation

   20 Comments: t_Comments
   21         | /* empty */

   22 Integer: INT_NUMBER
   23        | t_InfinityString
   24        | t_Variable

   25 Operator: t_String

   26 PrintString: t_print t_FOBrack ParameterOfPrintBlock t_FCBrack

   27 ParameterOfPrintBlock: ParameterOfPrintStatement ParameterOfPrintBlock
   28                      | ParameterOfPrintStatement

   29 ParameterOfPrintStatement: OnceOrEvery ParameterOfPrintWordList t_SemiColon
   30                          | OnceOrEvery t_printAll ParameterOfPrintWordList t_SemiColon

   31 ParameterOfPrintWordList: ParameterOfPrintWord ParameterOfPrintWordList
   32                         | ParameterOfPrintWord

   33 ParameterOfPrintWord: t_StringLiteral
   34                     | t_KeyWordsOfPrint

   35 OnceOrEvery: t_Once
   36            | t_Every

   37 TypeCastOperands: t_CastString OperandsNumbers

   38 OperandsNumbers: INT_NUMBER t_Comma OperandsNumbers
   39                | INT_NUMBER


Terminals, with rules where they appear

$end (0) 0
error (256)
t_String (258) 25
t_StringLiteral (259) 33
t_TypeValue (260) 9 10 12
t_OBrack (261) 13 14 15 16
t_CBrack (262) 13 14 15 16
t_Comma (263) 13 14 15 38
t_Eq (264)
t_OSquareBrack (265) 9 10 12
t_CSquareBrack (266) 9 10 12
t_OperatorString (267) 3 4 5 6 7
t_MinArgs (268) 3 4 5 6 7
t_MaxArgs (269) 3 4 5 6 7
t_Operand1 (270) 3 4 5 6 7
t_Operand2 (271) 3 4 5 6
t_Operand3 (272) 3 5
t_OtherOperandsString (273) 3 4
t_InferString (274) 3 4 5 6 7
t_InfinityString (275) 23
t_Hash (276) 10 17
t_Comments (277) 20
t_Add (278) 15
t_Max (279) 13
t_Min (280) 14
t_Addall (281) 16
INT_NUMBER (282) 22 38 39
t_ArgumentNumber (283)
t_Variable (284) 24
t_print (285) 26
t_FCBrack (286) 26
t_FOBrack (287) 26
t_Once (288) 35
t_Every (289) 36
t_SemiColon (290) 29 30
t_KeyWordsOfPrint (291) 34
t_printAll (292) 30
t_CastString (293) 37


Nonterminals, with rules where they appear

$accept (39)
    on left: 0
ListOfInferenceRules (40)
    on left: 1 2, on right: 0 2
InferenceRule (41)
    on left: 3 4 5 6 7 8, on right: 1 2
TypeTuple (42)
    on left: 9 10, on right: 3 4 5 6 7 11
InferredTypeTuple (43)
    on left: 11 12, on right: 3 4 5 6 7
Computation (44)
    on left: 13 14 15 16, on right: 12 19
ArgumentForComputation (45)
    on left: 17 18 19, on right: 13 14 15 16
Comments (46)
    on left: 20 21, on right: 8
Integer (47)
    on left: 22 23 24, on right: 3 4 5 6 7 9 10 17 18
Operator (48)
    on left: 25, on right: 3 4 5 6 7
PrintString (49)
    on left: 26, on right: 3 4 5 6 7
ParameterOfPrintBlock (50)
    on left: 27 28, on right: 26 27
ParameterOfPrintStatement (51)
    on left: 29 30, on right: 27 28
ParameterOfPrintWordList (52)
    on left: 31 32, on right: 29 30 31
ParameterOfPrintWord (53)
    on left: 33 34, on right: 31 32
OnceOrEvery (54)
    on left: 35 36, on right: 29 30
TypeCastOperands (55)
    on left: 37, on right: 3 4 5 6 7
OperandsNumbers (56)
    on left: 38 39, on right: 37 38


state 0

    0 $accept: . ListOfInferenceRules $end

    t_OperatorString  shift, and go to state 1
    t_Comments        shift, and go to state 2

    t_OperatorString  [reduce using rule 21 (Comments)]
    t_Comments        [reduce using rule 21 (Comments)]
    $default          reduce using rule 21 (Comments)

    ListOfInferenceRules  go to state 3
    InferenceRule         go to state 4
    Comments              go to state 5


state 1

    3 InferenceRule: t_OperatorString . Operator t_MinArgs Integer t_MaxArgs Integer t_Operand1 TypeTuple t_Operand2 TypeTuple t_Operand3 TypeTuple t_OtherOperandsString TypeTuple t_InferString InferredTypeTuple PrintString TypeCastOperands
    4              | t_OperatorString . Operator t_MinArgs Integer t_MaxArgs Integer t_Operand1 TypeTuple t_Operand2 TypeTuple t_OtherOperandsString TypeTuple t_InferString InferredTypeTuple PrintString TypeCastOperands
    5              | t_OperatorString . Operator t_MinArgs Integer t_MaxArgs Integer t_Operand1 TypeTuple t_Operand2 TypeTuple t_Operand3 TypeTuple t_InferString InferredTypeTuple PrintString TypeCastOperands
    6              | t_OperatorString . Operator t_MinArgs Integer t_MaxArgs Integer t_Operand1 TypeTuple t_Operand2 TypeTuple t_InferString InferredTypeTuple PrintString TypeCastOperands
    7              | t_OperatorString . Operator t_MinArgs Integer t_MaxArgs Integer t_Operand1 TypeTuple t_InferString InferredTypeTuple PrintString TypeCastOperands

    t_String  shift, and go to state 6

    Operator  go to state 7


state 2

   20 Comments: t_Comments .

    $default  reduce using rule 20 (Comments)


state 3

    0 $accept: ListOfInferenceRules . $end

    $end  shift, and go to state 8


state 4

    1 ListOfInferenceRules: InferenceRule .
    2                     | InferenceRule . ListOfInferenceRules

    t_OperatorString  shift, and go to state 1
    t_Comments        shift, and go to state 2

    $end              reduce using rule 1 (ListOfInferenceRules)
    $end              [reduce using rule 21 (Comments)]
    t_OperatorString  [reduce using rule 21 (Comments)]
    t_Comments        [reduce using rule 21 (Comments)]
    $default          reduce using rule 1 (ListOfInferenceRules)

    ListOfInferenceRules  go to state 9
    InferenceRule         go to state 4
    Comments              go to state 5


state 5

    8 InferenceRule: Comments .

    $default  reduce using rule 8 (InferenceRule)


state 6

   25 Operator: t_String .

    $default  reduce using rule 25 (Operator)


state 7

    3 InferenceRule: t_OperatorString Operator . t_MinArgs Integer t_MaxArgs Integer t_Operand1 TypeTuple t_Operand2 TypeTuple t_Operand3 TypeTuple t_OtherOperandsString TypeTuple t_InferString InferredTypeTuple PrintString TypeCastOperands
    4              | t_OperatorString Operator . t_MinArgs Integer t_MaxArgs Integer t_Operand1 TypeTuple t_Operand2 TypeTuple t_OtherOperandsString TypeTuple t_InferString InferredTypeTuple PrintString TypeCastOperands
    5              | t_OperatorString Operator . t_MinArgs Integer t_MaxArgs Integer t_Operand1 TypeTuple t_Operand2 TypeTuple t_Operand3 TypeTuple t_InferString InferredTypeTuple PrintString TypeCastOperands
    6              | t_OperatorString Operator . t_MinArgs Integer t_MaxArgs Integer t_Operand1 TypeTuple t_Operand2 TypeTuple t_InferString InferredTypeTuple PrintString TypeCastOperands
    7              | t_OperatorString Operator . t_MinArgs Integer t_MaxArgs Integer t_Operand1 TypeTuple t_InferString InferredTypeTuple PrintString TypeCastOperands

    t_MinArgs  shift, and go to state 10


state 8

    0 $accept: ListOfInferenceRules $end .

    $default  accept


state 9

    2 ListOfInferenceRules: InferenceRule ListOfInferenceRules .

    $default  reduce using rule 2 (ListOfInferenceRules)


state 10

    3 InferenceRule: t_OperatorString Operator t_MinArgs . Integer t_MaxArgs Integer t_Operand1 TypeTuple t_Operand2 TypeTuple t_Operand3 TypeTuple t_OtherOperandsString TypeTuple t_InferString InferredTypeTuple PrintString TypeCastOperands
    4              | t_OperatorString Operator t_MinArgs . Integer t_MaxArgs Integer t_Operand1 TypeTuple t_Operand2 TypeTuple t_OtherOperandsString TypeTuple t_InferString InferredTypeTuple PrintString TypeCastOperands
    5              | t_OperatorString Operator t_MinArgs . Integer t_MaxArgs Integer t_Operand1 TypeTuple t_Operand2 TypeTuple t_Operand3 TypeTuple t_InferString InferredTypeTuple PrintString TypeCastOperands
    6              | t_OperatorString Operator t_MinArgs . Integer t_MaxArgs Integer t_Operand1 TypeTuple t_Operand2 TypeTuple t_InferString InferredTypeTuple PrintString TypeCastOperands
    7              | t_OperatorString Operator t_MinArgs . Integer t_MaxArgs Integer t_Operand1 TypeTuple t_InferString InferredTypeTuple PrintString TypeCastOperands

    t_InfinityString  shift, and go to state 11
    INT_NUMBER        shift, and go to state 12
    t_Variable        shift, and go to state 13

    Integer  go to state 14


state 11

   23 Integer: t_InfinityString .

    $default  reduce using rule 23 (Integer)


state 12

   22 Integer: INT_NUMBER .

    $default  reduce using rule 22 (Integer)


state 13

   24 Integer: t_Variable .

    $default  reduce using rule 24 (Integer)


state 14

    3 InferenceRule: t_OperatorString Operator t_MinArgs Integer . t_MaxArgs Integer t_Operand1 TypeTuple t_Operand2 TypeTuple t_Operand3 TypeTuple t_OtherOperandsString TypeTuple t_InferString InferredTypeTuple PrintString TypeCastOperands
    4              | t_OperatorString Operator t_MinArgs Integer . t_MaxArgs Integer t_Operand1 TypeTuple t_Operand2 TypeTuple t_OtherOperandsString TypeTuple t_InferString InferredTypeTuple PrintString TypeCastOperands
    5              | t_OperatorString Operator t_MinArgs Integer . t_MaxArgs Integer t_Operand1 TypeTuple t_Operand2 TypeTuple t_Operand3 TypeTuple t_InferString InferredTypeTuple PrintString TypeCastOperands
    6              | t_OperatorString Operator t_MinArgs Integer . t_MaxArgs Integer t_Operand1 TypeTuple t_Operand2 TypeTuple t_InferString InferredTypeTuple PrintString TypeCastOperands
    7              | t_OperatorString Operator t_MinArgs Integer . t_MaxArgs Integer t_Operand1 TypeTuple t_InferString InferredTypeTuple PrintString TypeCastOperands

    t_MaxArgs  shift, and go to state 15


state 15

    3 InferenceRule: t_OperatorString Operator t_MinArgs Integer t_MaxArgs . Integer t_Operand1 TypeTuple t_Operand2 TypeTuple t_Operand3 TypeTuple t_OtherOperandsString TypeTuple t_InferString InferredTypeTuple PrintString TypeCastOperands
    4              | t_OperatorString Operator t_MinArgs Integer t_MaxArgs . Integer t_Operand1 TypeTuple t_Operand2 TypeTuple t_OtherOperandsString TypeTuple t_InferString InferredTypeTuple PrintString TypeCastOperands
    5              | t_OperatorString Operator t_MinArgs Integer t_MaxArgs . Integer t_Operand1 TypeTuple t_Operand2 TypeTuple t_Operand3 TypeTuple t_InferString InferredTypeTuple PrintString TypeCastOperands
    6              | t_OperatorString Operator t_MinArgs Integer t_MaxArgs . Integer t_Operand1 TypeTuple t_Operand2 TypeTuple t_InferString InferredTypeTuple PrintString TypeCastOperands
    7              | t_OperatorString Operator t_MinArgs Integer t_MaxArgs . Integer t_Operand1 TypeTuple t_InferString InferredTypeTuple PrintString TypeCastOperands

    t_InfinityString  shift, and go to state 11
    INT_NUMBER        shift, and go to state 12
    t_Variable        shift, and go to state 13

    Integer  go to state 16


state 16

    3 InferenceRule: t_OperatorString Operator t_MinArgs Integer t_MaxArgs Integer . t_Operand1 TypeTuple t_Operand2 TypeTuple t_Operand3 TypeTuple t_OtherOperandsString TypeTuple t_InferString InferredTypeTuple PrintString TypeCastOperands
    4              | t_OperatorString Operator t_MinArgs Integer t_MaxArgs Integer . t_Operand1 TypeTuple t_Operand2 TypeTuple t_OtherOperandsString TypeTuple t_InferString InferredTypeTuple PrintString TypeCastOperands
    5              | t_OperatorString Operator t_MinArgs Integer t_MaxArgs Integer . t_Operand1 TypeTuple t_Operand2 TypeTuple t_Operand3 TypeTuple t_InferString InferredTypeTuple PrintString TypeCastOperands
    6              | t_OperatorString Operator t_MinArgs Integer t_MaxArgs Integer . t_Operand1 TypeTuple t_Operand2 TypeTuple t_InferString InferredTypeTuple PrintString TypeCastOperands
    7              | t_OperatorString Operator t_MinArgs Integer t_MaxArgs Integer . t_Operand1 TypeTuple t_InferString InferredTypeTuple PrintString TypeCastOperands

    t_Operand1  shift, and go to state 17


state 17

    3 InferenceRule: t_OperatorString Operator t_MinArgs Integer t_MaxArgs Integer t_Operand1 . TypeTuple t_Operand2 TypeTuple t_Operand3 TypeTuple t_OtherOperandsString TypeTuple t_InferString InferredTypeTuple PrintString TypeCastOperands
    4              | t_OperatorString Operator t_MinArgs Integer t_MaxArgs Integer t_Operand1 . TypeTuple t_Operand2 TypeTuple t_OtherOperandsString TypeTuple t_InferString InferredTypeTuple PrintString TypeCastOperands
    5              | t_OperatorString Operator t_MinArgs Integer t_MaxArgs Integer t_Operand1 . TypeTuple t_Operand2 TypeTuple t_Operand3 TypeTuple t_InferString InferredTypeTuple PrintString TypeCastOperands
    6              | t_OperatorString Operator t_MinArgs Integer t_MaxArgs Integer t_Operand1 . TypeTuple t_Operand2 TypeTuple t_InferString InferredTypeTuple PrintString TypeCastOperands
    7              | t_OperatorString Operator t_MinArgs Integer t_MaxArgs Integer t_Operand1 . TypeTuple t_InferString InferredTypeTuple PrintString TypeCastOperands

    t_TypeValue  shift, and go to state 18

    TypeTuple  go to state 19


state 18

    9 TypeTuple: t_TypeValue . t_OSquareBrack Integer t_CSquareBrack
   10          | t_TypeValue . t_OSquareBrack t_Hash Integer t_CSquareBrack

    t_OSquareBrack  shift, and go to state 20


state 19

    3 InferenceRule: t_OperatorString Operator t_MinArgs Integer t_MaxArgs Integer t_Operand1 TypeTuple . t_Operand2 TypeTuple t_Operand3 TypeTuple t_OtherOperandsString TypeTuple t_InferString InferredTypeTuple PrintString TypeCastOperands
    4              | t_OperatorString Operator t_MinArgs Integer t_MaxArgs Integer t_Operand1 TypeTuple . t_Operand2 TypeTuple t_OtherOperandsString TypeTuple t_InferString InferredTypeTuple PrintString TypeCastOperands
    5              | t_OperatorString Operator t_MinArgs Integer t_MaxArgs Integer t_Operand1 TypeTuple . t_Operand2 TypeTuple t_Operand3 TypeTuple t_InferString InferredTypeTuple PrintString TypeCastOperands
    6              | t_OperatorString Operator t_MinArgs Integer t_MaxArgs Integer t_Operand1 TypeTuple . t_Operand2 TypeTuple t_InferString InferredTypeTuple PrintString TypeCastOperands
    7              | t_OperatorString Operator t_MinArgs Integer t_MaxArgs Integer t_Operand1 TypeTuple . t_InferString InferredTypeTuple PrintString TypeCastOperands

    t_Operand2     shift, and go to state 21
    t_InferString  shift, and go to state 22


state 20

    9 TypeTuple: t_TypeValue t_OSquareBrack . Integer t_CSquareBrack
   10          | t_TypeValue t_OSquareBrack . t_Hash Integer t_CSquareBrack

    t_InfinityString  shift, and go to state 11
    t_Hash            shift, and go to state 23
    INT_NUMBER        shift, and go to state 12
    t_Variable        shift, and go to state 13

    Integer  go to state 24


state 21

    3 InferenceRule: t_OperatorString Operator t_MinArgs Integer t_MaxArgs Integer t_Operand1 TypeTuple t_Operand2 . TypeTuple t_Operand3 TypeTuple t_OtherOperandsString TypeTuple t_InferString InferredTypeTuple PrintString TypeCastOperands
    4              | t_OperatorString Operator t_MinArgs Integer t_MaxArgs Integer t_Operand1 TypeTuple t_Operand2 . TypeTuple t_OtherOperandsString TypeTuple t_InferString InferredTypeTuple PrintString TypeCastOperands
    5              | t_OperatorString Operator t_MinArgs Integer t_MaxArgs Integer t_Operand1 TypeTuple t_Operand2 . TypeTuple t_Operand3 TypeTuple t_InferString InferredTypeTuple PrintString TypeCastOperands
    6              | t_OperatorString Operator t_MinArgs Integer t_MaxArgs Integer t_Operand1 TypeTuple t_Operand2 . TypeTuple t_InferString InferredTypeTuple PrintString TypeCastOperands

    t_TypeValue  shift, and go to state 18

    TypeTuple  go to state 25


state 22

    7 InferenceRule: t_OperatorString Operator t_MinArgs Integer t_MaxArgs Integer t_Operand1 TypeTuple t_InferString . InferredTypeTuple PrintString TypeCastOperands

    t_TypeValue  shift, and go to state 26

    TypeTuple          go to state 27
    InferredTypeTuple  go to state 28


state 23

   10 TypeTuple: t_TypeValue t_OSquareBrack t_Hash . Integer t_CSquareBrack

    t_InfinityString  shift, and go to state 11
    INT_NUMBER        shift, and go to state 12
    t_Variable        shift, and go to state 13

    Integer  go to state 29


state 24

    9 TypeTuple: t_TypeValue t_OSquareBrack Integer . t_CSquareBrack

    t_CSquareBrack  shift, and go to state 30


state 25

    3 InferenceRule: t_OperatorString Operator t_MinArgs Integer t_MaxArgs Integer t_Operand1 TypeTuple t_Operand2 TypeTuple . t_Operand3 TypeTuple t_OtherOperandsString TypeTuple t_InferString InferredTypeTuple PrintString TypeCastOperands
    4              | t_OperatorString Operator t_MinArgs Integer t_MaxArgs Integer t_Operand1 TypeTuple t_Operand2 TypeTuple . t_OtherOperandsString TypeTuple t_InferString InferredTypeTuple PrintString TypeCastOperands
    5              | t_OperatorString Operator t_MinArgs Integer t_MaxArgs Integer t_Operand1 TypeTuple t_Operand2 TypeTuple . t_Operand3 TypeTuple t_InferString InferredTypeTuple PrintString TypeCastOperands
    6              | t_OperatorString Operator t_MinArgs Integer t_MaxArgs Integer t_Operand1 TypeTuple t_Operand2 TypeTuple . t_InferString InferredTypeTuple PrintString TypeCastOperands

    t_Operand3             shift, and go to state 31
    t_OtherOperandsString  shift, and go to state 32
    t_InferString          shift, and go to state 33


state 26

    9 TypeTuple: t_TypeValue . t_OSquareBrack Integer t_CSquareBrack
   10          | t_TypeValue . t_OSquareBrack t_Hash Integer t_CSquareBrack
   12 InferredTypeTuple: t_TypeValue . t_OSquareBrack Computation t_CSquareBrack

    t_OSquareBrack  shift, and go to state 34


state 27

   11 InferredTypeTuple: TypeTuple .

    $default  reduce using rule 11 (InferredTypeTuple)


state 28

    7 InferenceRule: t_OperatorString Operator t_MinArgs Integer t_MaxArgs Integer t_Operand1 TypeTuple t_InferString InferredTypeTuple . PrintString TypeCastOperands

    t_print  shift, and go to state 35

    PrintString  go to state 36


state 29

   10 TypeTuple: t_TypeValue t_OSquareBrack t_Hash Integer . t_CSquareBrack

    t_CSquareBrack  shift, and go to state 37


state 30

    9 TypeTuple: t_TypeValue t_OSquareBrack Integer t_CSquareBrack .

    $default  reduce using rule 9 (TypeTuple)


state 31

    3 InferenceRule: t_OperatorString Operator t_MinArgs Integer t_MaxArgs Integer t_Operand1 TypeTuple t_Operand2 TypeTuple t_Operand3 . TypeTuple t_OtherOperandsString TypeTuple t_InferString InferredTypeTuple PrintString TypeCastOperands
    5              | t_OperatorString Operator t_MinArgs Integer t_MaxArgs Integer t_Operand1 TypeTuple t_Operand2 TypeTuple t_Operand3 . TypeTuple t_InferString InferredTypeTuple PrintString TypeCastOperands

    t_TypeValue  shift, and go to state 18

    TypeTuple  go to state 38


state 32

    4 InferenceRule: t_OperatorString Operator t_MinArgs Integer t_MaxArgs Integer t_Operand1 TypeTuple t_Operand2 TypeTuple t_OtherOperandsString . TypeTuple t_InferString InferredTypeTuple PrintString TypeCastOperands

    t_TypeValue  shift, and go to state 18

    TypeTuple  go to state 39


state 33

    6 InferenceRule: t_OperatorString Operator t_MinArgs Integer t_MaxArgs Integer t_Operand1 TypeTuple t_Operand2 TypeTuple t_InferString . InferredTypeTuple PrintString TypeCastOperands

    t_TypeValue  shift, and go to state 26

    TypeTuple          go to state 27
    InferredTypeTuple  go to state 40


state 34

    9 TypeTuple: t_TypeValue t_OSquareBrack . Integer t_CSquareBrack
   10          | t_TypeValue t_OSquareBrack . t_Hash Integer t_CSquareBrack
   12 InferredTypeTuple: t_TypeValue t_OSquareBrack . Computation t_CSquareBrack

    t_InfinityString  shift, and go to state 11
    t_Hash            shift, and go to state 23
    t_Add             shift, and go to state 41
    t_Max             shift, and go to state 42
    t_Min             shift, and go to state 43
    t_Addall          shift, and go to state 44
    INT_NUMBER        shift, and go to state 12
    t_Variable        shift, and go to state 13

    Computation  go to state 45
    Integer      go to state 24


state 35

   26 PrintString: t_print . t_FOBrack ParameterOfPrintBlock t_FCBrack

    t_FOBrack  shift, and go to state 46


state 36

    7 InferenceRule: t_OperatorString Operator t_MinArgs Integer t_MaxArgs Integer t_Operand1 TypeTuple t_InferString InferredTypeTuple PrintString . TypeCastOperands

    t_CastString  shift, and go to state 47

    TypeCastOperands  go to state 48


state 37

   10 TypeTuple: t_TypeValue t_OSquareBrack t_Hash Integer t_CSquareBrack .

    $default  reduce using rule 10 (TypeTuple)


state 38

    3 InferenceRule: t_OperatorString Operator t_MinArgs Integer t_MaxArgs Integer t_Operand1 TypeTuple t_Operand2 TypeTuple t_Operand3 TypeTuple . t_OtherOperandsString TypeTuple t_InferString InferredTypeTuple PrintString TypeCastOperands
    5              | t_OperatorString Operator t_MinArgs Integer t_MaxArgs Integer t_Operand1 TypeTuple t_Operand2 TypeTuple t_Operand3 TypeTuple . t_InferString InferredTypeTuple PrintString TypeCastOperands

    t_OtherOperandsString  shift, and go to state 49
    t_InferString          shift, and go to state 50


state 39

    4 InferenceRule: t_OperatorString Operator t_MinArgs Integer t_MaxArgs Integer t_Operand1 TypeTuple t_Operand2 TypeTuple t_OtherOperandsString TypeTuple . t_InferString InferredTypeTuple PrintString TypeCastOperands

    t_InferString  shift, and go to state 51


state 40

    6 InferenceRule: t_OperatorString Operator t_MinArgs Integer t_MaxArgs Integer t_Operand1 TypeTuple t_Operand2 TypeTuple t_InferString InferredTypeTuple . PrintString TypeCastOperands

    t_print  shift, and go to state 35

    PrintString  go to state 52


state 41

   15 Computation: t_Add . t_OBrack ArgumentForComputation t_Comma ArgumentForComputation t_CBrack

    t_OBrack  shift, and go to state 53


state 42

   13 Computation: t_Max . t_OBrack ArgumentForComputation t_Comma ArgumentForComputation t_CBrack

    t_OBrack  shift, and go to state 54


state 43

   14 Computation: t_Min . t_OBrack ArgumentForComputation t_Comma ArgumentForComputation t_CBrack

    t_OBrack  shift, and go to state 55


state 44

   16 Computation: t_Addall . t_OBrack ArgumentForComputation t_CBrack

    t_OBrack  shift, and go to state 56


state 45

   12 InferredTypeTuple: t_TypeValue t_OSquareBrack Computation . t_CSquareBrack

    t_CSquareBrack  shift, and go to state 57


state 46

   26 PrintString: t_print t_FOBrack . ParameterOfPrintBlock t_FCBrack

    t_Once   shift, and go to state 58
    t_Every  shift, and go to state 59

    ParameterOfPrintBlock      go to state 60
    ParameterOfPrintStatement  go to state 61
    OnceOrEvery                go to state 62


state 47

   37 TypeCastOperands: t_CastString . OperandsNumbers

    INT_NUMBER  shift, and go to state 63

    OperandsNumbers  go to state 64


state 48

    7 InferenceRule: t_OperatorString Operator t_MinArgs Integer t_MaxArgs Integer t_Operand1 TypeTuple t_InferString InferredTypeTuple PrintString TypeCastOperands .

    $default  reduce using rule 7 (InferenceRule)


state 49

    3 InferenceRule: t_OperatorString Operator t_MinArgs Integer t_MaxArgs Integer t_Operand1 TypeTuple t_Operand2 TypeTuple t_Operand3 TypeTuple t_OtherOperandsString . TypeTuple t_InferString InferredTypeTuple PrintString TypeCastOperands

    t_TypeValue  shift, and go to state 18

    TypeTuple  go to state 65


state 50

    5 InferenceRule: t_OperatorString Operator t_MinArgs Integer t_MaxArgs Integer t_Operand1 TypeTuple t_Operand2 TypeTuple t_Operand3 TypeTuple t_InferString . InferredTypeTuple PrintString TypeCastOperands

    t_TypeValue  shift, and go to state 26

    TypeTuple          go to state 27
    InferredTypeTuple  go to state 66


state 51

    4 InferenceRule: t_OperatorString Operator t_MinArgs Integer t_MaxArgs Integer t_Operand1 TypeTuple t_Operand2 TypeTuple t_OtherOperandsString TypeTuple t_InferString . InferredTypeTuple PrintString TypeCastOperands

    t_TypeValue  shift, and go to state 26

    TypeTuple          go to state 27
    InferredTypeTuple  go to state 67


state 52

    6 InferenceRule: t_OperatorString Operator t_MinArgs Integer t_MaxArgs Integer t_Operand1 TypeTuple t_Operand2 TypeTuple t_InferString InferredTypeTuple PrintString . TypeCastOperands

    t_CastString  shift, and go to state 47

    TypeCastOperands  go to state 68


state 53

   15 Computation: t_Add t_OBrack . ArgumentForComputation t_Comma ArgumentForComputation t_CBrack

    t_InfinityString  shift, and go to state 11
    t_Hash            shift, and go to state 69
    t_Add             shift, and go to state 41
    t_Max             shift, and go to state 42
    t_Min             shift, and go to state 43
    t_Addall          shift, and go to state 44
    INT_NUMBER        shift, and go to state 12
    t_Variable        shift, and go to state 13

    Computation             go to state 70
    ArgumentForComputation  go to state 71
    Integer                 go to state 72


state 54

   13 Computation: t_Max t_OBrack . ArgumentForComputation t_Comma ArgumentForComputation t_CBrack

    t_InfinityString  shift, and go to state 11
    t_Hash            shift, and go to state 69
    t_Add             shift, and go to state 41
    t_Max             shift, and go to state 42
    t_Min             shift, and go to state 43
    t_Addall          shift, and go to state 44
    INT_NUMBER        shift, and go to state 12
    t_Variable        shift, and go to state 13

    Computation             go to state 70
    ArgumentForComputation  go to state 73
    Integer                 go to state 72


state 55

   14 Computation: t_Min t_OBrack . ArgumentForComputation t_Comma ArgumentForComputation t_CBrack

    t_InfinityString  shift, and go to state 11
    t_Hash            shift, and go to state 69
    t_Add             shift, and go to state 41
    t_Max             shift, and go to state 42
    t_Min             shift, and go to state 43
    t_Addall          shift, and go to state 44
    INT_NUMBER        shift, and go to state 12
    t_Variable        shift, and go to state 13

    Computation             go to state 70
    ArgumentForComputation  go to state 74
    Integer                 go to state 72


state 56

   16 Computation: t_Addall t_OBrack . ArgumentForComputation t_CBrack

    t_InfinityString  shift, and go to state 11
    t_Hash            shift, and go to state 69
    t_Add             shift, and go to state 41
    t_Max             shift, and go to state 42
    t_Min             shift, and go to state 43
    t_Addall          shift, and go to state 44
    INT_NUMBER        shift, and go to state 12
    t_Variable        shift, and go to state 13

    Computation             go to state 70
    ArgumentForComputation  go to state 75
    Integer                 go to state 72


state 57

   12 InferredTypeTuple: t_TypeValue t_OSquareBrack Computation t_CSquareBrack .

    $default  reduce using rule 12 (InferredTypeTuple)


state 58

   35 OnceOrEvery: t_Once .

    $default  reduce using rule 35 (OnceOrEvery)


state 59

   36 OnceOrEvery: t_Every .

    $default  reduce using rule 36 (OnceOrEvery)


state 60

   26 PrintString: t_print t_FOBrack ParameterOfPrintBlock . t_FCBrack

    t_FCBrack  shift, and go to state 76


state 61

   27 ParameterOfPrintBlock: ParameterOfPrintStatement . ParameterOfPrintBlock
   28                      | ParameterOfPrintStatement .

    t_Once   shift, and go to state 58
    t_Every  shift, and go to state 59

    $default  reduce using rule 28 (ParameterOfPrintBlock)

    ParameterOfPrintBlock      go to state 77
    ParameterOfPrintStatement  go to state 61
    OnceOrEvery                go to state 62


state 62

   29 ParameterOfPrintStatement: OnceOrEvery . ParameterOfPrintWordList t_SemiColon
   30                          | OnceOrEvery . t_printAll ParameterOfPrintWordList t_SemiColon

    t_StringLiteral    shift, and go to state 78
    t_KeyWordsOfPrint  shift, and go to state 79
    t_printAll         shift, and go to state 80

    ParameterOfPrintWordList  go to state 81
    ParameterOfPrintWord      go to state 82


state 63

   38 OperandsNumbers: INT_NUMBER . t_Comma OperandsNumbers
   39                | INT_NUMBER .

    t_Comma  shift, and go to state 83

    $default  reduce using rule 39 (OperandsNumbers)


state 64

   37 TypeCastOperands: t_CastString OperandsNumbers .

    $default  reduce using rule 37 (TypeCastOperands)


state 65

    3 InferenceRule: t_OperatorString Operator t_MinArgs Integer t_MaxArgs Integer t_Operand1 TypeTuple t_Operand2 TypeTuple t_Operand3 TypeTuple t_OtherOperandsString TypeTuple . t_InferString InferredTypeTuple PrintString TypeCastOperands

    t_InferString  shift, and go to state 84


state 66

    5 InferenceRule: t_OperatorString Operator t_MinArgs Integer t_MaxArgs Integer t_Operand1 TypeTuple t_Operand2 TypeTuple t_Operand3 TypeTuple t_InferString InferredTypeTuple . PrintString TypeCastOperands

    t_print  shift, and go to state 35

    PrintString  go to state 85


state 67

    4 InferenceRule: t_OperatorString Operator t_MinArgs Integer t_MaxArgs Integer t_Operand1 TypeTuple t_Operand2 TypeTuple t_OtherOperandsString TypeTuple t_InferString InferredTypeTuple . PrintString TypeCastOperands

    t_print  shift, and go to state 35

    PrintString  go to state 86


state 68

    6 InferenceRule: t_OperatorString Operator t_MinArgs Integer t_MaxArgs Integer t_Operand1 TypeTuple t_Operand2 TypeTuple t_InferString InferredTypeTuple PrintString TypeCastOperands .

    $default  reduce using rule 6 (InferenceRule)


state 69

   17 ArgumentForComputation: t_Hash . Integer

    t_InfinityString  shift, and go to state 11
    INT_NUMBER        shift, and go to state 12
    t_Variable        shift, and go to state 13

    Integer  go to state 87


state 70
